# robo_senior

./: .gitignore  README.md  pyproject.toml  remoteapp.env.example
docs/: MANUAL_COMPLETO.md
launchers/: seniorbot-f141cis-scheduled.cmd  seniorbot-f141cis.cmd
scripts/: build_exe.ps1  discover_grid_focus.py  export_f141cis.py  export_remote_temp.py  export_remote_temp_assisted.py  install_f141cis_task.ps1  run_f141cis_daily.ps1  sync_exportacoes_to_server.ps1
seniorbot/: __init__.py  __main__.py  cli.py  config.py  dialogs.py  exceptions.py  export.py  f141cis_app.py  keyboard.py  logging.py  remote_desktop.py  screens.py  utils.py  windows.py
tests/: test_cli.py  test_dialogs.py  test_export.py  test_keyboard.py  test_logging.py  test_remote_desktop.py  test_screens.py  test_utils.py  test_windows.py
